# Computer_vision

./: README.md
Détection et Localisation/: Homography.py  Main.py  PoseEstimation.py  Tracking.py
Perception3D/: CalibUtils.py  Calibration.py  FixOpen3d_.txt  Main.py  MonoMain.py  PoseEstimation.py  Rectification.py  StereoMain.py  Tracking.py  matplotlib_test.py  open3d_test.py  opencv_test.py
TP_SVM/: ImagePipeline_TP_EPITA_CAQI_2024-2025_Without_Answers.ipynb - Colab.html  TP_SVM_exo1.ipynb  TP_SVM_exo2.ipynb  TP_SVM_exo3.ipynb  TP_SVM_intro.ipynb
TP_compression_video/: motion_estimation.ipynb
TP_compression_video/pour_etudiants/: motion_estimation.ipynb - Colab.html
Traitement_Image/: CMakeLists.txt
Traitement_Image/tifo_skel_tp/: histogram.cpp  histogram.hh  image.cpp  image.hh  image_io.cpp  main.cpp  read_raw.hh  test.cpp
Traitement_Image/tp2/: correctionTP.txt  memo.txt
Traitement_Image/tp3/tifo_skel_tp/: histogram.cpp  histogram.hh  image.hh  main.cpp
Traitement_nuage_points/: v
Traitement_nuage_points/tp1/: CMakeLists.txt
Traitement_nuage_points/tp1/src/: convert_to_visualize.cpp  kdtree.cpp  obj.cpp  obj.h  step1_test_kdtree.cpp  step2_filter.cpp  step3_smooth.cpp  step4_subsample.cpp
Traitement_nuage_points/tp2/: CMakeLists.txt
introductionML/: test.ipynb
introductionML/lab02_clustering_student/: 00_intro.ipynb  01-kmeans.ipynb  02-color-quantization.ipynb  03-segmentation.ipynb  (+3 more)
mlai/: TP-module1-large-data-projections.ipynb  TP1_MLAI_init.ipynb  TP1_partie1.ipynb
morphologie_mathematiques/: morpho-cours.ipynb  notebook.ipynb
(+35 files in other folders)
